# franka

./: .gitignore  CMakeLists.txt  FrankaRobot.cpp  FrankaRobot.h  path_recorder_controller.cpp  plot_citr.py  recorder.py
common/: examples_common.cpp  examples_common.h
